CDH-79846. Open modules for reflective access on java 11.
Change-Id: I314b8b7bb8318ed43358f4f24822183bc78b81fe